--- a/src/main/webapp/pages/labClinico/resultadosExamen.xhtml
+++ b/src/main/webapp/pages/labClinico/resultadosExamen.xhtml
@@ -22,8 +22,8 @@
             <div class="header-replace">
                 <div class="container-header" >
                     <div class="row lf" style="margin-top: 0.05%; margin-left: 2%" >                        
-                        <h2>#{resultadosExamenHome.pedidoExamen.id == null? 'Nueva Receta:': 'Agregar Resultados de Examen para '}
-                            #{resultadosExamenHome.pedidoExamen.paciente.nombres} #{resultadosExamenHome.pedidoExamen.paciente.apellidos}</h2>
+                        <h3>#{resultadosExamenHome.pedidoExamen.id == null? 'Editar resultados de examen para:': 'Agregar resultados de examen para '}
+                            #{resultadosExamenHome.pedidoExamen.paciente.nombres} #{resultadosExamenHome.pedidoExamen.paciente.apellidos}</h3>
                     </div>
                 </div>
             </div>            
