--- a/src/main/webapp/pages/depSalud/medicina/consultaMedica.xhtml
+++ b/src/main/webapp/pages/depSalud/medicina/consultaMedica.xhtml
@@ -84,7 +84,7 @@
                                         <label for="peso" class="span3">#{messages['signosVitales.peso']} *</label>
                                         <div class="input"> 
                                             <pe:inputNumber id="peso" value="#{consultaMedicaHome.instance.signosVitales.peso}" required="false" style="width: 190px;" 
-                                                            maxValue="500" maxlength="500" dir="lrt" symbol="  kilogramos" symbolPosition="left"  decimalPlaces="2" 
+                                                            maxValue="500" maxlength="500" dir="lrt" symbol="  kg." symbolPosition="left"  decimalPlaces="2" 
                                                             disabled="#{not empty consultaMedicaHome.instance.signosVitales.peso and consultaMedicaHome.instance.persistent}">
                                                 <p:ajax event="blur" update="@parent" process="@this"/>  
                                             </pe:inputNumber>                                                                                                                                  
@@ -92,7 +92,7 @@
                                         <label for="presionArtDiag" class="span3">#{messages['signosVitales.presionArt']} #{messages['signosVitales.presionArt.diastolica']} *</label>
                                         <div class="input">                                                                                
                                             <pe:inputNumber  id="presionArtDiag" value="#{consultaMedicaHome.instance.signosVitales.presionArterialDiastolica}" required="false" style="width: 190px;" 
-                                                             rendered="true" symbol="  respiraciones/minuto" symbolPosition="rigth" maxValue="200" decimalPlaces="2" 
+                                                             rendered="true" symbol="  mmHg" symbolPosition="rigth" maxValue="200" decimalPlaces="2" 
                                                              disabled="#{not empty consultaMedicaHome.instance.signosVitales.presionArterialDiastolica and consultaMedicaHome.instance.persistent}">
                                                 <p:ajax event="blur" update="@parent" process="@this"/>  
                                             </pe:inputNumber>                                        
@@ -100,7 +100,7 @@
                                         <label for="presionArtSis" class="span3">#{messages['signosVitales.presionArt']} #{messages['signosVitales.presionArt.sistolica']} *</label>
                                         <div class="input"> 
                                             <pe:inputNumber  id="presionArtSis" value="#{consultaMedicaHome.instance.signosVitales.presionArterialSistolica}" required="false" style="width: 190px;" 
-                                                             rendered="true" symbol="  respiraciones/minuto" symbolPosition="rigth" maxValue="200" decimalPlaces="2" 
+                                                             rendered="true" symbol="  mmHg" symbolPosition="rigth" maxValue="200" decimalPlaces="2" 
                                                              disabled="#{not empty consultaMedicaHome.instance.signosVitales.presionArterialSistolica and consultaMedicaHome.instance.persistent}">   
                                                 <p:ajax event="blur" update="@parent" process="@this"/>  
                                             </pe:inputNumber>                                                                                                                 
@@ -118,7 +118,7 @@
                                         <label for="frecuenciaResp" class="span3">#{messages['signosVitales.frecuenciaResp']} *</label>
                                         <div class="input">                                                                                
                                             <pe:inputNumber  id="frecuenciaResp" value="#{consultaMedicaHome.instance.signosVitales.frecuenciaRespiratoria}" required="false" style="width: 190px;" 
-                                                             rendered="true" symbol="  respiraciones/minuto" symbolPosition="rigth" maxValue="90" decimalPlaces="0" 
+                                                             rendered="true" symbol="  rpm" symbolPosition="rigth" maxValue="90" decimalPlaces="0" 
                                                              disabled="#{not empty consultaMedicaHome.instance.signosVitales.frecuenciaRespiratoria and consultaMedicaHome.instance.persistent}">
                                                 <p:ajax event="blur" update="@parent" process="@this"/>  
                                             </pe:inputNumber>  
@@ -126,14 +126,14 @@
                                         <label for="talla" class="span3">#{messages['signosVitales.talla']} *</label>
                                         <div class="input">                                                                                
                                             <pe:inputNumber id="talla" value="#{consultaMedicaHome.instance.signosVitales.talla}" required="false" style="width: 190px;" 
-                                                            rendered="true" symbol="        centimetros" symbolPosition="rigth" maxValue="230" decimalPlaces="0"
+                                                            rendered="true" symbol="   cm" symbolPosition="rigth" maxValue="230" decimalPlaces="0"
                                                             disabled="#{not empty consultaMedicaHome.instance.signosVitales.talla and consultaMedicaHome.instance.persistent}">                                            
                                                 <p:ajax event="blur" update="@parent" process="@this"/>  
                                             </pe:inputNumber>                                        
                                         </div>
                                         <label for="temperatura" class="span3">#{messages['signosVitales.temperatura']} *</label>
                                         <pe:inputNumber  id="temperatura" value="#{consultaMedicaHome.instance.signosVitales.temperatura}" required="false" style="width: 190px;" 
-                                                         rendered="true" symbol="       mmHg" symbolPosition="rigth" maxValue="90" decimalPlaces="2" 
+                                                         rendered="true" symbol="    °C" symbolPosition="rigth" maxValue="90" decimalPlaces="2" 
                                                          disabled="#{not empty consultaMedicaHome.instance.signosVitales.temperatura and consultaMedicaHome.instance.persistent}">
                                             <p:ajax event="blur" update="@parent" process="@this"/>  
                                         </pe:inputNumber>                                        
