--- a/src/main/webapp/pages/depSalud/odontologia/consultaOdontologica.xhtml
+++ b/src/main/webapp/pages/depSalud/odontologia/consultaOdontologica.xhtml
@@ -94,7 +94,7 @@
                                         <label for="presionArtDiag" class="span3">#{messages['signosVitales.presionArt']} #{messages['signosVitales.presionArt.diastolica']} *</label>
                                         <div class="input">                                                                                
                                             <pe:inputNumber  id="presionArtDiag" value="#{consultaOdontHome.instance.signosVitales.presionArterialDiastolica}" required="false" style="width: 190px;" 
-                                                             rendered="true" symbol="  respiraciones/minuto" symbolPosition="rigth" maxValue="200" decimalPlaces="2" 
+                                                             rendered="true" symbol="  mmHg" symbolPosition="rigth" maxValue="200" decimalPlaces="2" 
                                                              disabled="#{not empty consultaOdontHome.instance.signosVitales.presionArterialDiastolica and consultaOdontHome.instance.persistent}">
                                                 <p:ajax event="blur" update="@parent" process="@this"/>  
                                             </pe:inputNumber>                                        
@@ -102,7 +102,7 @@
                                         <label for="presionArtSis" class="span3">#{messages['signosVitales.presionArt']} #{messages['signosVitales.presionArt.sistolica']} *</label>
                                         <div class="input"> 
                                             <pe:inputNumber  id="presionArtSis" value="#{consultaOdontHome.instance.signosVitales.presionArterialSistolica}" required="false" style="width: 190px;" 
-                                                             rendered="true" symbol="  respiraciones/minuto" symbolPosition="rigth" maxValue="200" decimalPlaces="2" 
+                                                             rendered="true" symbol="  mmHg" symbolPosition="rigth" maxValue="200" decimalPlaces="2" 
                                                              disabled="#{not empty consultaOdontHome.instance.signosVitales.presionArterialSistolica and consultaOdontHome.instance.persistent}">   
                                                 <p:ajax event="blur" update="@parent" process="@this"/>  
                                             </pe:inputNumber>                                                                                                                 
@@ -128,14 +128,14 @@
                                         <label for="talla" class="span3">#{messages['signosVitales.talla']} *</label>
                                         <div class="input">                                                                                
                                             <pe:inputNumber id="talla" value="#{consultaOdontHome.instance.signosVitales.talla}" required="false" style="width: 190px;" 
-                                                            rendered="true" symbol="        centimetros" symbolPosition="rigth" maxValue="230" decimalPlaces="0"
+                                                            rendered="true" symbol="     cm" symbolPosition="rigth" maxValue="230" decimalPlaces="0"
                                                             disabled="#{not empty consultaOdontHome.instance.signosVitales.talla and consultaOdontHome.instance.persistent}">                                            
                                                 <p:ajax event="blur" update="@parent" process="@this"/>  
                                             </pe:inputNumber>                                        
                                         </div>
                                         <label for="temperatura" class="span3">#{messages['signosVitales.temperatura']} *</label>
                                         <pe:inputNumber  id="temperatura" value="#{consultaOdontHome.instance.signosVitales.temperatura}" required="false" style="width: 190px;" 
-                                                         rendered="true" symbol="       mmHg" symbolPosition="rigth" maxValue="90" decimalPlaces="2" 
+                                                         rendered="true" symbol="       °C" symbolPosition="rigth" maxValue="90" decimalPlaces="2" 
                                                          disabled="#{not empty consultaOdontHome.instance.signosVitales.temperatura and consultaOdontHome.instance.persistent}">
                                             <p:ajax event="blur" update="@parent" process="@this"/>  
                                         </pe:inputNumber>                                        
